--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
                     <div class="close"> <img src="./assets/images/icons8-close.svg"/> </div>
                 </div>
 
+                
+                <div class="fieldOfSelection">
+                    <label class=" label_dev">Selecione os Dispositivos</label>
+                    <input type="text">
+                </div>
+                  
+
+
+
                         <button class="button"; onclick="sendData()">
                             Send Data
                         </button>
