--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     
                      <script>
                         async function listdevices(){
-                            console.log(Account)
+                            console.log('YURI')
                               
                           /*   const account_token = "a394b4c9-7ea7-4346-bbe1-ddb35f9bc948";
 
